# DNSGUI

./: INSTALLATION  LICENSE  README.md  hum.ipynb  install.sh  pyproject.toml
applet/files/dnssettings@conrad.roeber/: applet.js  metadata.json
src/: dns-conf.py  dnsconf.py
test/: resolved.conf  test.md  test.sh
tk/: dns-conf.helper.sh  dns-conf.py
