[project]
name = "dnsgui"
version = "0.1.0"
description = "Graphical interface for DNS resolver configuration"
authors = [
    {name = "Conrad",email = "conrad.roeber@mailbox.org"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "regex (>=2024.11.6,<2025.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
