[tool.poetry]
name = "dnsgui"
version = "0.1.0"
description = "Graphical interface for DNS resolver configuration"
authors = ["Conrad Röber"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
regex = "^2024.11.6"
pyqt5 = "^5.15.11"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
